Spacing fixes

--- a/front-end/Assets/src/css/modules/_webinars.scss
+++ b/front-end/Assets/src/css/modules/_webinars.scss
@@ -4,7 +4,7 @@
         .landingPage-product-list{
             padding: 2rem 0;
             .card{
-                padding-bottom: 30px;
+                padding-bottom: 40px;
             }
             .card-header {
                 display: flex;
